fix : changes scrollbar colour

--- a/src/App.css
+++ b/src/App.css
@@ -10,16 +10,16 @@
 }
 
 body::-webkit-scrollbar {
-  width: 0.5rem;
+  width: 0.8rem;
 }
 
 body::-webkit-scrollbar-track {
-  -webkit-box-shadow: inset 0 0 6px #0d6efd;
+  -webkit-box-shadow: inset 0 0 6px #ffffff;
 }
 
 body::-webkit-scrollbar-thumb {
-  /* background-color: #0d6efd; */
-  outline: 1px solid #000000;
+  background-color: #aaa9ac;
+  border-radius: 2;
 }
 
 /* 
